@@ -67,7 +67,6 @@ import org.elasticsearch.core.IOUtils;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.mapper.DocumentMapper;
 import org.elasticsearch.index.mapper.FieldNamesFieldMapper;
-import org.elasticsearch.index.mapper.IgnoredSourceFieldMapper;
 import org.elasticsearch.index.mapper.MapperServiceTestCase;
 import org.elasticsearch.index.mapper.ParsedDocument;
 import org.elasticsearch.index.mapper.SourceFieldMapper;
@@ -89,7 +88,10 @@ import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 
+import static org.elasticsearch.xpack.core.security.authz.accesscontrol.SecurityIndexReaderWrapperUnitTests.fieldPermissionDef;
 import static org.hamcrest.Matchers.equalTo;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
 
 /** Simple tests for this filterreader */
 public class FieldSubsetReaderTests extends MapperServiceTestCase {
@@ -670,7 +672,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.addDocument(doc);
 
         // open reader
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", SourceFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         // see only one field
@@ -709,7 +711,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             iw.close();
 
             {
-                Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", IgnoredSourceFieldMapper.NAME));
+                Automaton automaton = Automatons.patterns(List.of("fieldA"));
                 try (
                     DirectoryReader indexReader = FieldSubsetReader.wrap(
                         wrapInMockESDirectoryReader(DirectoryReader.open(directory)),
@@ -740,7 +742,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             }
 
             {
-                Automaton automaton = Automatons.patterns(Arrays.asList("obj.fieldC", IgnoredSourceFieldMapper.NAME));
+                Automaton automaton = Automatons.patterns(List.of("obj.fieldC"));
                 try (
                     DirectoryReader indexReader = FieldSubsetReader.wrap(
                         wrapInMockESDirectoryReader(DirectoryReader.open(directory)),
@@ -772,7 +774,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             }
 
             {
-                Automaton automaton = Automatons.patterns(Arrays.asList("arr.fieldD", IgnoredSourceFieldMapper.NAME));
+                Automaton automaton = Automatons.patterns("arr.fieldD");
                 try (
                     DirectoryReader indexReader = FieldSubsetReader.wrap(
                         wrapInMockESDirectoryReader(DirectoryReader.open(directory)),
@@ -812,7 +814,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         map.put("bar", "baz");
 
         CharacterRunAutomaton include = new CharacterRunAutomaton(Automata.makeString("foo"));
-        Map<String, Object> filtered = FieldSubsetReader.filter(map, include, 0);
+        Map<String, Object> filtered = FieldSubsetReader.filter(map, include);
         Map<String, Object> expected = new HashMap<>();
         expected.put("foo", 3);
 
@@ -827,7 +829,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         map.put("bar", "baz");
 
         include = new CharacterRunAutomaton(Automatons.patterns("foo.*"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         expected.put("foo", subMap);
 
@@ -835,7 +837,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
 
         // include on leading wildcard
         include = new CharacterRunAutomaton(Automatons.patterns("*.bar"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         subMap = new HashMap<>();
         subMap.put("bar", 42);
@@ -845,7 +847,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
 
         // include on inner value
         include = new CharacterRunAutomaton(Automatons.patterns("foo.bar"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
 
         assertEquals(expected, filtered);
 
@@ -853,7 +855,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         include = new CharacterRunAutomaton(
             Operations.minus(Automata.makeAnyString(), Automatons.patterns("foo.bar"), Operations.DEFAULT_DETERMINIZE_WORK_LIMIT)
         );
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         expected.put("bar", "baz");
         expected.put("foo", Collections.singletonMap("baz", 6));
@@ -864,7 +866,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         include = new CharacterRunAutomaton(
             Operations.minus(Automata.makeAnyString(), Automatons.patterns("foo.*"), Operations.DEFAULT_DETERMINIZE_WORK_LIMIT)
         );
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = Collections.singletonMap("bar", "baz");
 
         assertEquals(expected, filtered);
@@ -880,7 +882,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         map.put("foo", subArray);
 
         include = new CharacterRunAutomaton(Automatons.patterns("foo.bar"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         subArray = new ArrayList<>();
         subMap = new HashMap<>();
@@ -892,7 +894,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
 
         // include on inner array 2
         include = new CharacterRunAutomaton(Automatons.patterns("foo"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         subArray = new ArrayList<>();
         subArray.add(12);
@@ -904,7 +906,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         include = new CharacterRunAutomaton(
             Operations.minus(Automata.makeAnyString(), Automatons.patterns("foo.baz"), Operations.DEFAULT_DETERMINIZE_WORK_LIMIT)
         );
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         subArray = new ArrayList<>();
         subMap = new HashMap<>();
@@ -919,7 +921,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         include = new CharacterRunAutomaton(
             Operations.minus(Automata.makeAnyString(), Automatons.patterns("foo"), Operations.DEFAULT_DETERMINIZE_WORK_LIMIT)
         );
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
         expected = new HashMap<>();
         subArray = new ArrayList<>();
         subMap = new HashMap<>();
@@ -940,7 +942,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         map.put("bar", values);
 
         include = new CharacterRunAutomaton(Automatons.patterns("bar.baz"));
-        filtered = FieldSubsetReader.filter(map, include, 0);
+        filtered = FieldSubsetReader.filter(map, include);
 
         expected = new HashMap<>();
         expected.put("bar", Arrays.asList(new HashMap<>(), Collections.singletonMap("baz", "2")));
@@ -964,9 +966,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.addDocument(doc);
 
         // open reader
-        Set<String> fields = new HashSet<>();
-        fields.add("fieldA");
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", FieldNamesFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         // see only one field
@@ -1024,7 +1024,51 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.addDocument(doc);
 
         // open reader
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", "fieldC", FieldNamesFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA", "fieldC");
+        DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
+
+        // see only two fields
+        LeafReader segmentReader = ir.leaves().get(0).reader();
+        Terms terms = segmentReader.terms(FieldNamesFieldMapper.NAME);
+        TermsEnum termsEnum = terms.iterator();
+        assertEquals(new BytesRef("fieldA"), termsEnum.next());
+        assertEquals(new BytesRef("fieldC"), termsEnum.next());
+        assertNull(termsEnum.next());
+
+        // seekExact
+        termsEnum = terms.iterator();
+        assertTrue(termsEnum.seekExact(new BytesRef("fieldA")));
+        assertFalse(termsEnum.seekExact(new BytesRef("fieldB")));
+        assertTrue(termsEnum.seekExact(new BytesRef("fieldC")));
+
+        // seekCeil
+        termsEnum = terms.iterator();
+        assertEquals(SeekStatus.FOUND, termsEnum.seekCeil(new BytesRef("fieldA")));
+        assertEquals(SeekStatus.NOT_FOUND, termsEnum.seekCeil(new BytesRef("fieldB")));
+        assertEquals(new BytesRef("fieldC"), termsEnum.term());
+        assertEquals(SeekStatus.END, termsEnum.seekCeil(new BytesRef("fieldD")));
+
+        TestUtil.checkReader(ir);
+        IOUtils.close(ir, iw, dir);
+    }
+
+    public void testMetadataFieldNames() throws Exception {
+        Directory dir = newDirectory();
+        IndexWriterConfig iwc = new IndexWriterConfig(null);
+        IndexWriter iw = new IndexWriter(dir, iwc);
+
+        // add document with 2 fields
+        Document doc = new Document();
+        doc.add(new StringField("fieldA", "test", Field.Store.NO));
+        doc.add(new StringField("fieldB", "test", Field.Store.NO));
+        doc.add(new StringField("fieldC", "test", Field.Store.NO));
+        doc.add(new StringField(FieldNamesFieldMapper.NAME, "fieldA", Field.Store.NO));
+        doc.add(new StringField(FieldNamesFieldMapper.NAME, "fieldB", Field.Store.NO));
+        doc.add(new StringField(FieldNamesFieldMapper.NAME, "fieldC", Field.Store.NO));
+        iw.addDocument(doc);
+
+        // open reader
+        Automaton automaton = Automatons.patterns("fieldA", "fieldC");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         // see only two fields
@@ -1069,7 +1113,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.addDocument(doc);
 
         // open reader
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", "fieldC", FieldNamesFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA", "fieldC");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         // see only one field
@@ -1088,6 +1132,31 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         IOUtils.close(ir, iw, dir);
     }
 
+    public void testMetadataFieldFiltering() {
+        var result = new FieldPermissions(fieldPermissionDef(new String[] {}, null));
+        for (var field : FieldPermissions.METADATA_FIELDS_ALLOWLIST) {
+            FieldInfos actual = FieldSubsetReader.filterPermittedFields(
+                new FieldInfos(new FieldInfo[] { getFieldInfoWithName(field) }),
+                result.getPermittedFieldsAutomaton()
+            );
+            assertThat(actual.size(), equalTo(1));
+            assertThat(actual.fieldInfo(field), is(notNullValue()));
+
+            actual = FieldSubsetReader.filterPermittedFields(
+                new FieldInfos(new FieldInfo[] { getFieldInfoWithName(field + "." + "field") }),
+                result.getPermittedFieldsAutomaton()
+            );
+            assertThat(actual.size(), equalTo(1));
+            assertThat(actual.fieldInfo(field + "." + "field"), is(notNullValue()));
+
+            actual = FieldSubsetReader.filterPermittedFields(
+                new FieldInfos(new FieldInfo[] { getFieldInfoWithName("field") }),
+                result.getPermittedFieldsAutomaton()
+            );
+            assertThat(actual.size(), equalTo(0));
+        }
+    }
+
     /**
      * test where _field_names does not exist
      */
@@ -1103,7 +1172,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.addDocument(doc);
 
         // open reader
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", SourceFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         // see only one field
@@ -1234,7 +1303,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
     }
 
     @SuppressWarnings("unchecked")
-    public void testMappingsFilteringDuelWithSourceFiltering() throws Exception {
+    public void testMappingsFilteringDuelWithSourceFiltering() {
         Metadata metadata = Metadata.builder()
             .put(IndexMetadata.builder("index").settings(indexSettings(IndexVersion.current(), 1, 0)).putMapping(MAPPING_TEST_ITEM))
             .build();
@@ -1264,10 +1333,9 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             assertEquals(1, nestedProperties.size());
             assertTrue(nestedProperties.containsKey("inner1"));
 
-            Automaton automaton = FieldPermissions.initializePermittedFieldsAutomaton(definition);
-            CharacterRunAutomaton include = new CharacterRunAutomaton(automaton);
+            CharacterRunAutomaton include = new FieldPermissions(definition).getPermittedFieldsAutomaton();
             Map<String, Object> stringObjectMap = XContentHelper.convertToMap(XContentType.JSON.xContent(), DOC_TEST_ITEM, false);
-            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include, 0);
+            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include);
             assertEquals(2, filtered.size());
             Map<String, Object> object = (Map<String, Object>) filtered.get("object");
             assertEquals(1, object.size());
@@ -1308,10 +1376,9 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             assertEquals(1, inner2.size());
             assertEquals("keyword", inner2.get("type"));
 
-            Automaton automaton = FieldPermissions.initializePermittedFieldsAutomaton(definition);
-            CharacterRunAutomaton include = new CharacterRunAutomaton(automaton);
+            CharacterRunAutomaton include = new FieldPermissions(definition).getPermittedFieldsAutomaton();
             Map<String, Object> stringObjectMap = XContentHelper.convertToMap(XContentType.JSON.xContent(), DOC_TEST_ITEM, false);
-            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include, 0);
+            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include);
             assertEquals(1, filtered.size());
             Map<String, Object> object = (Map<String, Object>) filtered.get("object");
             assertEquals(2, object.size());
@@ -1336,10 +1403,9 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             Map<String, Object> objectProperties = (Map<String, Object>) objectMapping.get("properties");
             assertEquals(0, objectProperties.size());
 
-            Automaton automaton = FieldPermissions.initializePermittedFieldsAutomaton(definition);
-            CharacterRunAutomaton include = new CharacterRunAutomaton(automaton);
+            CharacterRunAutomaton include = new FieldPermissions(definition).getPermittedFieldsAutomaton();
             Map<String, Object> stringObjectMap = XContentHelper.convertToMap(XContentType.JSON.xContent(), DOC_TEST_ITEM, false);
-            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include, 0);
+            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include);
             // TODO FLS filters out empty objects from source, although they are granted access.
             // When filtering mappings though we keep them.
             assertEquals(0, filtered.size());
@@ -1367,10 +1433,9 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
             assertEquals(1, nestedProperties.size());
             assertTrue(nestedProperties.containsKey("inner2"));
 
-            Automaton automaton = FieldPermissions.initializePermittedFieldsAutomaton(definition);
-            CharacterRunAutomaton include = new CharacterRunAutomaton(automaton);
+            CharacterRunAutomaton include = new FieldPermissions(definition).getPermittedFieldsAutomaton();
             Map<String, Object> stringObjectMap = XContentHelper.convertToMap(XContentType.JSON.xContent(), DOC_TEST_ITEM, false);
-            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include, 0);
+            Map<String, Object> filtered = FieldSubsetReader.filter(stringObjectMap, include);
             assertEquals(1, filtered.size());
             List<Map<String, Object>> nested = (List<Map<String, Object>>) filtered.get("nested");
             assertEquals(2, nested.size());
@@ -1401,7 +1466,7 @@ public class FieldSubsetReaderTests extends MapperServiceTestCase {
         iw.commit();
 
         // open reader
-        Automaton automaton = Automatons.patterns(Arrays.asList("fieldA", SourceFieldMapper.NAME));
+        Automaton automaton = Automatons.patterns("fieldA");
         DirectoryReader ir = FieldSubsetReader.wrap(DirectoryReader.open(iw), new CharacterRunAutomaton(automaton));
 
         TestUtil.checkReader(ir);
